.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mapex
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - mapex-demo.dev.insee.io
  rules:
    - host: mapex-demo.dev.insee.io
      http:
        paths:
          - path: /
            backend:
              serviceName: mapex
              servicePort: http
